# lexa

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh  justfile
.cargo/: audit.toml
.github/: actionlint.yaml
.github/workflows/: release.yml
benches/: engine.rs
benchmarks/accuracy/: manifest.example.json  mutation.example.jsonl
docs/: accuracy-benchmark.md  install.md  tools.md
npm/: package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/lexa-index/: README.md  index.js  package.json  skill.js
npm/linux-x64/: LICENSE  README.md  package.json
npm/scripts/: arguments.mjs  cargo-version.mjs  configure-trusted-publishing.mjs  pack-packages.mjs  package-definitions.mjs  publish-packages.mjs  stage-packages.mjs  sync-version.mjs  test-local-install.mjs  verify-checksums.mjs  write-publish-manifests.mjs
npm/test/: launcher.test.mjs  (+2 more)
skill/: SKILL.md
src/: application.rs  audit.rs  cache.rs  cli.rs  cli_tests.rs  cli_upgrade.rs  edit.rs  engine.rs  freshness.rs  glob.rs  lib.rs  main.rs  mcp.rs  output.rs  pipeline.rs  project_path.rs  snapshot.rs  store.rs  types.rs  walker.rs
tests/: agent_cli_output_format_benchmark.rs  agent_edit_safety_benchmark.rs  agent_maintenance_benchmark.rs  agent_mcp_session_benchmark.rs  agent_retrieval_benchmark.rs  cli_graph.rs  ranking.rs
www/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vocs.config.tsx  wrangler.toml
xtask/: Cargo.toml
(+117 files in other folders)
