[package]
name = "lexa"
version = "0.8.0"
edition = "2021"
description = "Fast code intelligence engine for AI agents"
license = "MIT"
repository = "https://github.com/anvia-hq/lexa"
readme = "README.md"

[workspace]
members = ["xtask"]
resolver = "2"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toon-format = { version = "0.5.0", default-features = false }
toml = "0.8"
bincode = "1.3"
hashbrown = "0.15"
walkdir = "2"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
regex = "1"
notify = "6"
tree-sitter = "0.24"
tree-sitter-zig = "1.1"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
correctness = "deny"
unwrap_used = "deny"

[[bench]]
name = "engine"
harness = false

[profile.release]
opt-level = 3
lto = true
